--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Ejercicio_Dialogos</string>
+    <string name="title">Elige un Ejercicio!</string>
+    <string name="btnEj1Text">Ir al Ejercicio 1</string>
+    <string name="btnEj2Text">Ir al Ejercicio 2</string>
+    <string name="btnEj3Text">Ir al Ejercicio 3</string>
+    <string name="Ej1Titulo">Ejercicio 1</string>
+    <string name="btnEj1SalirText">Cerrar Actividad</string>
+    <string name="SalirDialogTitle">¿Estás seguro de que quieres salir?</string>
+    <string name="SalirDialogBody">Si sales no pasara nada, pero te quitaremos 200 euros del banco.</string>
+    <string name="SalirDialogSi">SI</string>
+    <string name="SalirDialogNo">NO</string>
 </resources>
